<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="app_name">Grazer User Data</string>
    <string name="get_users">Get users</string>
    <string name="profile_photo">Profile Photo</string>
</resources>