<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
          android:id="@+id/ll_main_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:background="#FFFFFF"
          android:padding="25dp"
          android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:padding="30dp"
            android:text="@string/login"/>
    <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:textColor="#000000"
            android:textColorHint="#434343"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:inputType="text" android:minHeight="48dp"/>
    <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:textColor="#000000"
            android:textColorHint="#434343"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password" android:minHeight="48dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">
      <Button style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/reset"
              android:text="@string/reset"
              android:textAllCaps="false"
              android:textColor="#000000"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
      <Button style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/submit"
              android:text="@string/submit"
              android:textAllCaps="false"
              android:textColor="#000000"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
    </LinearLayout>
    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimaryDark"/>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>